[tool.poetry]
name = "aplus-twibot"
version = "2.0"
description = "Twitter bot posting new questions of A+Tsukuba"
authors = ["half-blue <info@aplus-tsukuba.net>"]
readme = "README.md"
packages = [{include = "aplus_twibot"}]

[tool.poetry.dependencies]
python = "^3.8.1"
tweepy = "^4.12.1"
requests = "^2.28.2"
mysqlclient = "^2.1.1"
PyYAML = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
